test: 리팩토링에 따른 RacingGameTest 수정
- CarNameInputProcessorTest의 경우, 자동차 입력이 중복도 허용되기 때문에
  표시해줌